fixed check inital

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
       <li><button class='choice num2'></button></li>
       <li><button class='choice num3'></button></li>
       <li><button class='choice num4'></button></li>
-    </ol> 
+    </ol>
+    <label id='TorF'></label> 
   </main>
   <script src="./assets/js/script.js"></script>
 </body>
