added dev buttons

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     </ol>
     <label id='TorF'></label> 
   </main>
+  <button id='dev1'></button>
+  <button id='dev2'></button>
   <script src="./assets/js/script.js"></script>
 </body>
 </html>
