added an allDone form page

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
       <li><button class='choice num3'></button></li>
       <li><button class='choice num4'></button></li>
     </ol>
+    <form id='allDone' method='POST'>
+      <label id='initals'></label>
+      <input id='initalsInput' type="text">
+      <button id='submit'></button>
+    </form>
     <label id='TorF'></label> 
   </main>
   <button id='dev1'></button>
