fixed prevent default

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </ol>
     <form id='allDone' method='POST'>
       <label id='initals'></label>
-      <input id='initalsInput' type="text">
+      <input id='initalsInput' type="text" autocomplete='off'>
       <button id='submit'></button>
     </form>
     <label id='TorF'></label> 
