--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1 class='question'></h1>
     <p id='p'></p>
     <button class='start'>Start Quiz</button>
-    <ol id='list'>
+    <ol id='orderedList'>
       <li><button class='choice num1'></button></li>
       <li><button class='choice num2'></button></li>
       <li><button class='choice num3'></button></li>
