--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   </main>
   <button id='dev1'></button>
   <button id='dev2'></button>
+  <button id='dev3'></button>
   <script src="./assets/js/script.js"></script>
 </body>
 </html>
