added go back button

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1 class='question'></h1>
     <p id='p'></p>
     <button class='start'>Start Quiz</button>
-    <ol id='orderedList'>
+    <ol id='numList'>
       <li><button class='choice num1'></button></li>
       <li><button class='choice num2'></button></li>
       <li><button class='choice num3'></button></li>
@@ -28,6 +28,12 @@
       <input id='initalsInput' type="text" autocomplete='off'>
       <button id='submit'></button>
     </form>
+    <ol id='hsList'></ol>
+    <section id='highscore-btns'>
+      <button class='goBack'></button>
+      <button class='clearHighscores'></button> 
+      
+    </section>
     <label id='TorF'></label> 
   </main>
   <button id='dev1'></button>
