--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       <li><button class='choice num4'></button></li>
     </ol>
     <form id='allDone' method='POST'>
-      <label id='initals'></label>
-      <input id='initalsInput' type="text" autocomplete='off'>
+      <label id='initials'></label>
+      <input id='initialsInput' type="text" autocomplete='off'>
       <button id='submit'></button>
     </form>
     <ol id='hsList'></ol>
@@ -35,9 +35,9 @@
     </section>
     <label id='TorF'></label> 
   </main>
-  <button id='dev1'></button>
+  <!-- <button id='dev1'></button>
   <button id='dev2'></button>
-  <button id='dev3'></button>
+  <button id='dev3'></button> -->
   <script src="./assets/js/script.js"></script>
 </body>
 </html>
